# ChangeLog for app-office/libreoffice
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-office/libreoffice/ChangeLog,v 1.535 2014/01/25 11:25:22 dilfridge Exp $

  25 Jan 2014; Andreas K. Huettel <dilfridge@gentoo.org>
  libreoffice-4.1.4.2.ebuild, +files/libreoffice-4.1.4.2-curl-config.patch,
  libreoffice-4.1.9999.ebuild, libreoffice-4.2.9999.ebuild,
  libreoffice-9999-r2.ebuild, +files/libreoffice-9999-curl-config.patch:
  Use pkgconfig to detect curl first, then fallback to curl-config; bug 497956

  28 Dec 2013; Andreas K. Huettel <dilfridge@gentoo.org>
  libreoffice-4.1.3.2-r2.ebuild:
  Backport fixes for bug 488846 and bug 406295 to stable

  27 Dec 2013; Andreas K. Huettel <dilfridge@gentoo.org>
  libreoffice-4.1.4.2.ebuild, libreoffice-4.1.9999.ebuild,
  libreoffice-4.2.9999.ebuild, libreoffice-9999-r2.ebuild:
  Add sofficerc to CONFIG_PROTECT, bug 406295

  27 Dec 2013; Andreas K. Huettel <dilfridge@gentoo.org>
  libreoffice-4.1.4.2.ebuild, libreoffice-4.1.9999.ebuild,
  libreoffice-4.2.9999.ebuild, libreoffice-9999-r2.ebuild:
  Switch to --disable-hardlink-deliver, this fixes bug 481784 and bug 488846

*libreoffice-4.2.9999 (27 Dec 2013)
*libreoffice-4.1.4.2 (27 Dec 2013)

  27 Dec 2013; Tomáš Chvátal <scarabeus@gentoo.org> +libreoffice-4.1.4.2.ebuild,
  +libreoffice-4.2.9999.ebuild:
  Version bump to 4.1.4.2 and add live ebuild for 4.2 branch as it lives now.
  (force due to not completely synced cvs tree)

  26 Dec 2013; Andreas K. Huettel <dilfridge@gentoo.org>
  libreoffice-4.1.9999.ebuild, libreoffice-9999-r2.ebuild:
  Move pax-mark to src_install, bug 494136

  26 Dec 2013; Andreas K. Huettel <dilfridge@gentoo.org>
  -libreoffice-4.1.2.3.ebuild, -libreoffice-4.1.3.2.ebuild:
  Remove old

  17 Dec 2013; Andreas K. Huettel <dilfridge@gentoo.org>
  libreoffice-4.1.3.2-r2.ebuild:
  stable on x86 based on testing by AT Myckel Habets, bug 490114
