@@ -1,6 +1,10 @@
 # ChangeLog for app-office/libreoffice
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/libreoffice/ChangeLog,v 1.535 2014/01/25 11:25:22 dilfridge Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/libreoffice/ChangeLog,v 1.536 2014/01/25 20:34:27 scarabeus Exp $
+
+  25 Jan 2014; Tomáš Chvátal <scarabeus@gentoo.org> libreoffice-4.2.9999.ebuild,
+  libreoffice-9999-r2.ebuild:
+  Raise mdds version dep.
 
   25 Jan 2014; Andreas K. Huettel <dilfridge@gentoo.org>
   libreoffice-4.1.4.2.ebuild, +files/libreoffice-4.1.4.2-curl-config.patch,
